added e2e tests, fixed bugs with attachments

--- a/FlaskSurveyForm/.gitignore
+++ b/FlaskSurveyForm/.gitignore
@@ -38,3 +38,12 @@ attached_assets/
 # OS specific files
 .DS_Store
 Thumbs.db 
+
+# Node modules
+node_modules/
+
+# Temporary files
+*.tmp
+*.tmp.*
+*.tmp.*.*
+
