--- a/FlaskSurveyForm/package.json
+++ b/FlaskSurveyForm/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.44.1"
+    "@playwright/test": "^1.44.1",
+    "csv-parse": "^5.6.0"
   }
 }
