--- a/FlaskSurveyForm/requirements.txt
+++ b/FlaskSurveyForm/requirements.txt
@@ -5,4 +5,6 @@ pandas>=1.2
 openpyxl>=3.0  # Required by pandas for Excel export
 flask-ldap3-login>=0.2.0
 Flask-Login>=0.5.0
-ldap3>=2.9  # Required for LDAP connectivity 
+ldap3>=2.9  # Required for LDAP connectivity
+pyad
+pyldap 
