--- a/FlaskSurveyForm/requirements.txt
+++ b/FlaskSurveyForm/requirements.txt
@@ -1,10 +1,32 @@
-Flask>=2.0
-Flask-WTF>=1.0
-python-dotenv>=0.15
-pandas>=1.2
-openpyxl>=3.0  # Required by pandas for Excel export
-flask-ldap3-login>=0.2.0
-Flask-Login>=0.5.0
-ldap3>=2.9  # Required for LDAP connectivity
-pyad
-pyldap 
+blinker==1.9.0
+click==8.1.8
+dnspython==2.7.0
+email-validator==2.2.0
+et-xmlfile==2.0.0
+flask==3.1.0
+flask-ldap3-login==1.0.2
+flask-login==0.6.3
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.2
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+jinja2==3.1.6
+ldap3==2.9.1
+markupsafe==3.0.2
+numpy==2.2.5
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pymysql==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+sqlalchemy==2.0.40
+typing-extensions==4.13.0
+tzdata==2025.2
+werkzeug==3.1.3
+wtforms==3.2.1
