--- a/FlaskSurveyForm/package.json
+++ b/FlaskSurveyForm/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "csv-parse": "^5.6.0"
+  },
+  "dependencies": {
+    "prettier": "^3.5.3"
   }
 }
