--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - feature/*
   pull_request:
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "18" # Or your preferred Node.js version
+      - name: List files in checkout directory # Added for debugging
+        run: ls -la
       - name: Install dependencies
         run: npm install # Or use yarn install if you use Yarn
       - name: Install Playwright Browsers
