--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -17,17 +17,18 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "18" # Or your preferred Node.js version
-      - name: List files in checkout directory # Added for debugging
-        run: ls -la
       - name: Install dependencies
         run: npm install # Or use yarn install if you use Yarn
+        working-directory: FlaskSurveyForm
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+        working-directory: FlaskSurveyForm
       - name: Run Playwright tests
         run: npx playwright test
+        working-directory: FlaskSurveyForm
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: FlaskSurveyForm/test-results/
           retention-days: 30
