--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: "18" # Or your preferred Node.js version
       - name: List files in checkout directory # Added for debugging
-        run: ls -la
+        run: cd FlaskSurveyForm
       - name: Install dependencies
         run: npm install # Or use yarn install if you use Yarn
       - name: Install Playwright Browsers
