--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -9,23 +9,18 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    timeout-minutes: 60
+  tests_e2e:
+    name: Run end-to-end tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "18" # Or your preferred Node.js version
-      - name: Install Playwright Browsers
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependencies
+        run: npm ci
+        working-directory: FlaskSurveyForm
+      - name: Install playwright browsers
         run: npx playwright install --with-deps
         working-directory: FlaskSurveyForm
-      - name: Run Playwright tests
+      - name: Run tests
         run: npx playwright test
         working-directory: FlaskSurveyForm
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: FlaskSurveyForm/test-results/
-          retention-days: 30
