--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -9,23 +9,25 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
+  e2e-tests: # Renamed job
+    timeout-minutes: 60 # Kept timeout
+    runs-on: ubuntu-latest # or macos-latest, windows-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "18" # Or your preferred Node.js version
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-        working-directory: FlaskSurveyForm
-      - name: Run Playwright tests
-        run: npx playwright test
-        working-directory: FlaskSurveyForm
-      - uses: actions/upload-artifact@v4
+      - uses: actions/checkout@v4 # Updated checkout action version
+
+      # Node setup is handled by playwright-github-action
+      # Dependency and browser installation is handled by playwright-github-action
+      - uses: microsoft/playwright-github-action@v1
+        # This action installs Node, dependencies (npm install), and Playwright browsers
+
+      - name: Run Playwright tests # Simplified step name
+        run: npx playwright test # Use npx playwright test directly
+        working-directory: FlaskSurveyForm # Specify working directory
+
+      - uses: actions/upload-artifact@v4 # Re-added artifact upload
         if: always()
         with:
           name: playwright-report
-          path: FlaskSurveyForm/test-results/
-          retention-days: 30
+          path: FlaskSurveyForm/test-result/ # Adjusted path for report location
+          retention-days: 30 # Set retention days for artifacts
