--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -20,26 +20,37 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x' # Or specify your Python version
+          python-version: "3.x"
 
-      # Install Python dependencies
       - name: Install Python dependencies
         run: pip install -r requirements.txt
         working-directory: FlaskSurveyForm
 
-      # Start Flask server in the background
-      - name: Start Flask Server
-        run: python main.py & # Run in background
+      # Setup Node.js for Playwright
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      # Install Node.js dependencies
+      - name: Install Node.js dependencies
+        run: npm install
         working-directory: FlaskSurveyForm
 
-      # Wait for the server to start (adjust sleep time if needed)
+      # Install Playwright browsers
+      - name: Install Playwright Browsers
+        run: npx playwright install
+        working-directory: FlaskSurveyForm
+
+      # Start Flask server in the background
+      - name: Start Flask Server
+        run: python main.py &
+        working-directory: FlaskSurveyForm
+
       - name: Wait for Server
         run: sleep 5
 
-      # Install Node.js, npm dependencies, and Playwright browsers
-      - uses: microsoft/playwright-github-action@v1
-
-      # Run Playwright tests with environment variables
+      # Run Playwright tests
       - name: Run Playwright tests
         env:
           BASE_URL: "http://127.0.0.1:5000"
@@ -53,5 +64,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: FlaskSurveyForm/test-result/ # Adjusted path for report location
+          path: FlaskSurveyForm/test-result/
           retention-days: 30
