--- a/.github/workflows/playWrite.yml
+++ b/.github/workflows/playWrite.yml
@@ -1,3 +1,4 @@
+# This file is to run the playwright tests on GitHub Actions on every push to the main branch or on pull requests.
 name: Playwright Tests
 
 on:
@@ -58,11 +59,3 @@ jobs:
           ADMIN_PASSWORD: "cork4liam"
         run: npx playwright test
         working-directory: FlaskSurveyForm
-
-      # Upload test results artifact
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: FlaskSurveyForm/test-result/
-          retention-days: 30
